# VoteModes

./: .gitignore  README.md  infra_diagram.drawio  response.json
downloader_lambda_app/: Dockerfile  downloader_lambda.py  main.py  push_image.sh  pyproject.toml  requirements.txt
downloader_lambda_app/local-dev/: divisions-table.json  lambda_runner.py  mps-table.json
downloader_lambda_app/raw/: rawDivisions  rawDivisionsWithVotes  rawMPList  rawMPsToVotes
downloader_lambda_app/request_executors/boto3_helpers/: client_wrapper.py
downloader_lambda_app/request_executors/divisions/: division.py  divisions_list_downloader.py  downloaders.py  month_with_intervals.py  schemas.py
downloader_lambda_app/request_executors/mps/: mp_list_downloader.py
downloader_lambda_app/request_executors/votes_per_divisions/: division_with_votes.py  downloaders.py  schemas.py  vote_per_division_downloader.py  votes_per_division_file_based.py  votes_processor.py
downloader_lambda_app/test/: __init__.py  test_divisions_list_downloader.py  test_integration.py  test_vote_per_division_downloader.py
downloader_lambda_app/test/data/: first_divisions.json  third_divisions_with_votes.json
downloader_lambda_app/tests/: __init__.py  data.py  data_loader.py  divisions_list_downloader_tests.py  integration_tests.py  test_divisions_list_downloader.py  test_integration.py  test_vote_per_division_downloader.py  vote_per_division_downloader_tests.py
downloader_lambda_app/tests/data/: first_divisions.json  first_divisions_with_votes.json  mps.json  second_divisions.json  third_divisions.json  (+1 more)
(+129 files in other folders)
